--- a/views/index.jade
+++ b/views/index.jade
@@ -1,6 +1,59 @@
-extends layout
-
-block content
-	div
-		a(id='sender')='Send a Message'
-		ul(id='receiver')
+!!! 5
+html.no-js
+  head
+    meta(charset='utf-8')
+    meta(http-equiv='X-UA-Compatible', content='IE=edge,chrome=1')
+    title
+    meta(name='description', content='')
+    meta(name='viewport', content='width=device-width, initial-scale=1')
+    link(rel='stylesheet', href='/css/bootstrap.min.css')
+    style
+      body {
+      padding-top: 50px;
+      padding-bottom: 20px;
+      }
+    link(rel='stylesheet', href='/css/bootstrap-theme.min.css')
+    link(rel='stylesheet', href='/css/colorpicker.css')
+    link(rel='stylesheet', href='/css/main.css')
+    script(src='/js/vendor/modernizr-2.6.2-respond-1.1.0.min.js')
+  body(ng-app='produccionApp')
+    //if lt IE 7
+      p.browsehappy
+        | You are using an
+        strong outdated
+        | browser. Please
+        a(href='http://browsehappy.com/') upgrade your browser
+        | to improve your experience.
+    .navbar.navbar-inverse.navbar-fixed-top(role='navigation')
+      .container
+        .navbar-header
+          button.navbar-toggle(type='button', data-toggle='collapse', data-target='.navbar-collapse')
+            span.sr-only Toggle navigation
+            span.icon-bar
+            span.icon-bar
+            span.icon-bar
+          a.navbar-brand(href='#') Planificación
+        .navbar-collapse.collapse
+          ul.nav.navbar-nav
+            li.active
+              a(href='#') Home
+            li
+              a(href='#setting') Configuración
+        //
+          /.navbar-collapse 
+    .container(ng-controller='produccionController')
+      div(ng-view='ng-view')
+      hr
+      footer
+        p
+    //
+       /container 
+    script(src='js/vendor/jquery-1.11.1.min.js')
+    script(src='js/vendor/bootstrap.min.js')
+    script(src='js/vendor/angular.min.js')
+    script(src='js/vendor/angular-route.min.js')
+    script(src='js/vendor/ui-bootstrap-tpls-0.11.0.min.js')
+    script(src='js/vendor/moment-with-langs.min.js')
+    script(src='js/vendor/bootstrap-colorpicker-module.js')
+    script(src='js/main.js')
+    script(src='js/controller.js')
