Mongodb update funciona. Implementenado insert cuando no encuentra

--- a/views/index.jade
+++ b/views/index.jade
@@ -14,6 +14,7 @@ html.no-js
       }
     link(rel='stylesheet', href='/css/bootstrap-theme.min.css')
     link(rel='stylesheet', href='/css/colorpicker.css')
+    link(rel='stylesheet', href='/css/xeditable.css')
     link(rel='stylesheet', href='/css/main.css')
     script(src='/js/vendor/modernizr-2.6.2-respond-1.1.0.min.js')
   body(ng-app='produccionApp')
@@ -55,5 +56,6 @@ html.no-js
     script(src='js/vendor/ui-bootstrap-tpls-0.11.0.min.js')
     script(src='js/vendor/moment-with-langs.min.js')
     script(src='js/vendor/bootstrap-colorpicker-module.js')
+    script(src='js/vendor/xeditable.js')
     script(src='js/main.js')
     script(src='js/controller.js')
