Multiusuario egin socket.io erabiliz

--- a/views/index.jade
+++ b/views/index.jade
@@ -43,18 +43,19 @@ html.no-js
               li
                 a(href='#/setting') Configuración
         //
-          /.navbar-collapse 
+          /.navbar-collapse
     .container(ng-controller='produccionController')
       div(ng-view='ng-view')
       hr
       footer
         p
     //
-       /container 
+       /container
     script(src='js/vendor/jquery-1.11.1.min.js')
     script(src='js/vendor/bootstrap.min.js')
     script(src='js/vendor/angular.min.js')
     script(src='js/vendor/angular-route.min.js')
+    script(src='js/vendor/socket.io.js')
     script(src='js/vendor/ui-bootstrap-tpls-0.11.0.min.js')
     script(src='js/vendor/moment-with-langs.min.js')
     script(src='js/vendor/bootstrap-colorpicker-module.js')
