HTML etiketak sartzea ahalbideratu

--- a/views/index.jade
+++ b/views/index.jade
@@ -60,5 +60,6 @@ html.no-js
     script(src='js/vendor/moment-with-langs.min.js')
     script(src='js/vendor/bootstrap-colorpicker-module.js')
     script(src='js/vendor/xeditable.js')
+    script(src='js/vendor/angular-sanitize.min.js')
     script(src='js/main.js')
     script(src='js/controller.js')
