fullcalendar+angular instalatuta. Arazorik gabe instalatua. Lanen hasteko garaia

--- a/views/index.jade
+++ b/views/index.jade
@@ -15,6 +15,8 @@ html.no-js
     link(rel='stylesheet', href='/css/bootstrap-theme.min.css')
     link(rel='stylesheet', href='/css/colorpicker.css')
     link(rel='stylesheet', href='/css/xeditable.css')
+    link(rel='stylesheet', href='/css/fullcalendar.css')
+    link(rel='stylesheet', href='/css/calendarDemo.css')
     link(rel='stylesheet', href='/css/main.css')
     script(src='/js/vendor/modernizr-2.6.2-respond-1.1.0.min.js')
   body(ng-app='produccionApp')
@@ -52,6 +54,7 @@ html.no-js
     //
        /container
     script(src='js/vendor/jquery-1.11.1.min.js')
+    script(src='js/vendor/jquery-ui-1.10.4.custom.min.js')
     script(src='js/vendor/bootstrap.min.js')
     script(src='js/vendor/angular.min.js')
     script(src='js/vendor/angular-route.min.js')
@@ -61,5 +64,8 @@ html.no-js
     script(src='js/vendor/bootstrap-colorpicker-module.js')
     script(src='js/vendor/xeditable.js')
     script(src='js/vendor/angular-sanitize.min.js')
+    script(src='js/vendor/calendar.js')
+    script(src='js/vendor/fullcalendar.js')
+    script(src='js/vendor/gcal.js')
     script(src='js/main.js')
     script(src='js/controller.js')
