--- a/views/index.jade
+++ b/views/index.jade
@@ -44,6 +44,9 @@ html.no-js
 
               li
                 a(href='#/setting') Configuración
+
+              li
+                a(href='#/egutegia') Egutegia
         //
           /.navbar-collapse
     .container(ng-controller='produccionController')
@@ -64,8 +67,8 @@ html.no-js
     script(src='js/vendor/bootstrap-colorpicker-module.js')
     script(src='js/vendor/xeditable.js')
     script(src='js/vendor/angular-sanitize.min.js')
-    script(src='js/vendor/calendar.js')
     script(src='js/vendor/fullcalendar.js')
+    script(src='js/vendor/calendar.js')
     script(src='js/vendor/gcal.js')
     script(src='js/main.js')
     script(src='js/controller.js')
