--- a/views/index.jade
+++ b/views/index.jade
@@ -72,3 +72,8 @@ html.no-js
     script(src='js/vendor/gcal.js')
     script(src='js/main.js')
     script(src='js/controller.js')
+    script(src='js/controller/produccion.js')
+    script(src='js/controller/linea1.js')
+    script(src='js/controller/linea2.js')
+    script(src='js/controller/setting.js')
+    script(src='js/controller/egutegia.js')
