--- a/views/index.jade
+++ b/views/index.jade
@@ -70,6 +70,8 @@ html.no-js
     script(src='js/vendor/fullcalendar.js')
     script(src='js/vendor/calendar.js')
     script(src='js/vendor/gcal.js')
+    script(src='js/vendor/highcharts.js')
+    script(src='js/vendor/highcharts-ng.min.js')
     script(src='js/main.js')
     script(src='js/controller.js')
     script(src='js/controller/produccion.js')
