Login Cookiak erabiliz edizioa ahalbideratzeko

--- a/views/index.jade
+++ b/views/index.jade
@@ -19,7 +19,7 @@ html.no-js
     link(rel='stylesheet', href='/css/calendarDemo.css')
     link(rel='stylesheet', href='/css/main.css')
     script(src='/js/vendor/modernizr-2.6.2-respond-1.1.0.min.js')
-  body(ng-app='produccionApp')
+  body(ng-app='produccionApp')(ng-controller='produccionController')
     //if lt IE 7
       p.browsehappy
         | You are using an
@@ -47,9 +47,14 @@ html.no-js
 
               li
                 a(href='#/egutegia') Egutegia
+            ul.nav.navbar-nav.navbar-right
+              li
+                a(href='#/login') Login
+                //a(ng-click='#/login', class='btn-auth btn-github') Login
+
         //
           /.navbar-collapse
-    .container(ng-controller='produccionController')
+    .container
       div(ng-view='ng-view')
       hr
       footer
@@ -61,6 +66,7 @@ html.no-js
     script(src='js/vendor/bootstrap.min.js')
     script(src='js/vendor/angular.min.js')
     script(src='js/vendor/angular-route.min.js')
+    script(src='js/vendor/angular-cookies.min.js')
     script(src='js/vendor/socket.io.js')
     script(src='js/vendor/ui-bootstrap-tpls-0.11.0.min.js')
     script(src='js/vendor/moment-with-langs.min.js')
@@ -79,3 +85,4 @@ html.no-js
     script(src='js/controller/linea2.js')
     script(src='js/controller/setting.js')
     script(src='js/controller/egutegia.js')
+    script(src='js/controller/login.js')
