--- a/views/index.jade
+++ b/views/index.jade
@@ -69,6 +69,7 @@ html.no-js
     script(src='js/vendor/bootstrap.min.js')
     script(src='js/vendor/angular.min.js')
     script(src='js/vendor/angular-route.min.js')
+    script(src='js/vendor/angular-resource.min.js')
     script(src='js/vendor/angular-cookies.min.js')
     script(src='js/vendor/socket.io.js')
     script(src='js/vendor/ui-bootstrap-tpls-0.11.0.min.js')
