Factory berria sortzen web service berriak erabiltzeko

--- a/views/index.jade
+++ b/views/index.jade
@@ -66,6 +66,7 @@ html.no-js
        /container
     script(src='js/vendor/jquery-1.11.1.min.js')
     script(src='js/vendor/jquery-ui-1.10.4.custom.min.js')
+    //- script(src='js/vendor/jquery-ui-1.11.0.js')
     script(src='js/vendor/bootstrap.min.js')
     script(src='js/vendor/angular.min.js')
     script(src='js/vendor/angular-route.min.js')
