--- a/views/index.jade
+++ b/views/index.jade
@@ -72,6 +72,8 @@ html.no-js
     script(src='js/vendor/angular-route.min.js')
     script(src='js/vendor/angular-resource.min.js')
     script(src='js/vendor/angular-cookies.min.js')
+    script(src='js/vendor/spin.min.js')
+    script(src='js/vendor/angular-spinner.min.js')
     script(src='js/vendor/socket.io.js')
     script(src='js/vendor/ui-bootstrap-tpls-0.11.0.min.js')
     script(src='js/vendor/moment-with-langs.min.js')
