--- a/views/index.jade
+++ b/views/index.jade
@@ -72,6 +72,7 @@ html.no-js
     script(src='js/vendor/angular-route.min.js')
     script(src='js/vendor/angular-resource.min.js')
     script(src='js/vendor/angular-cookies.min.js')
+    script(src='js/vendor/ngDraggable.js')
     script(src='js/vendor/spin.min.js')
     script(src='js/vendor/angular-spinner.min.js')
     script(src='js/vendor/socket.io.js')
