Crud bi lineetan ongi

--- a/static/css/main.css
+++ b/static/css/main.css
@@ -58,3 +58,7 @@ td.tdlinea {
 .item-wrapper button {
     margin-left: 1px !important;
 }
+
+.editable-click, a.editable-click {
+    border-bottom: none !important;
+}
