Drag and Drop badabil. CSS-ak aldatzea faltako zen

--- a/static/css/main.css
+++ b/static/css/main.css
@@ -62,3 +62,13 @@ td.tdlinea {
 .editable-click, a.editable-click {
     border-bottom: none !important;
 }
+.on-drag-enter{
+    background-color : #aaaaaa;
+}
+.on-drag-hover:before {
+  content: 'Drop him gently';
+  display: block;
+  color: white;
+  font-size: x-large;
+  font-weight: 800;
+}
