--- a/views/index.jade
+++ b/views/index.jade
@@ -65,14 +65,15 @@ html.no-js
     //
        /container
     script(src='js/vendor/jquery-1.11.1.min.js')
-    script(src='js/vendor/jquery-ui-1.10.4.custom.min.js')
-    //- script(src='js/vendor/jquery-ui-1.11.0.js')
+    //script(src='js/vendor/jquery-ui-1.10.4.custom.min.js')
+    script(src='js/vendor/jquery-ui-1.11.0.js')
     script(src='js/vendor/bootstrap.min.js')
     script(src='js/vendor/angular.min.js')
     script(src='js/vendor/angular-route.min.js')
     script(src='js/vendor/angular-resource.min.js')
     script(src='js/vendor/angular-cookies.min.js')
-    script(src='js/vendor/angular-dragdrop.min.js')
+    //script(src='js/vendor/angular-dragdrop.min.js')
+    script(src='js/vendor/draganddrop.js')
     script(src='js/vendor/spin.min.js')
     script(src='js/vendor/angular-spinner.min.js')
     script(src='js/vendor/socket.io.js')
@@ -86,7 +87,6 @@ html.no-js
     script(src='js/vendor/gcal.js')
     script(src='js/vendor/highcharts.js')
     script(src='js/vendor/highcharts-ng.min.js')
-    script(src='js/main.js')
     script(src='js/controller.js')
     script(src='js/controller/produccion.js')
     script(src='js/controller/linea1.js')
@@ -95,3 +95,4 @@ html.no-js
     script(src='js/controller/egutegia.js')
     script(src='js/controller/login.js')
     script(src='js/controller/logout.js')
+    script(src='js/main.js')
