Hirugarren linea gehitu da

--- a/views/index.jade
+++ b/views/index.jade
@@ -91,6 +91,7 @@ html.no-js
     script(src='js/controller/produccion.js')
     script(src='js/controller/linea1.js')
     script(src='js/controller/linea2.js')
+    script(src='js/controller/linea3.js')
     script(src='js/controller/setting.js')
     script(src='js/controller/egutegia.js')
     script(src='js/controller/login.js')
