--- a/views/index.jade
+++ b/views/index.jade
@@ -74,6 +74,7 @@ html.no-js
     script(src='js/vendor/angular-cookies.min.js')
     //script(src='js/vendor/angular-dragdrop.min.js')
     script(src='js/vendor/draganddrop.js')
+    script(src='js/vendor/sortable.js')
     script(src='js/vendor/spin.min.js')
     script(src='js/vendor/angular-spinner.min.js')
     script(src='js/vendor/socket.io.js')
