--- a/views/index.jade
+++ b/views/index.jade
@@ -47,6 +47,9 @@ html.no-js
 
               li
                 a(href='#/egutegia') Egutegia
+
+              li
+                a(href='#') Gaua
             ul.nav.navbar-nav.navbar-right
               li
                 a(href='#')(ng-show='isadmin')(ng-click='dologout()')
