--- a/views/index.jade
+++ b/views/index.jade
@@ -18,6 +18,7 @@ html.no-js
     link(rel='stylesheet', href='/css/fullcalendar.css')
     link(rel='stylesheet', href='/css/calendarDemo.css')
     link(rel='stylesheet', href='/css/main.css')
+    link(rel='stylesheet', href='//cdn.datatables.net/1.10.4/css/jquery.dataTables.min.css')
     script(src='/js/vendor/modernizr-2.6.2-respond-1.1.0.min.js')
   body(ng-app='produccionApp')(ng-controller='produccionController')
     //if lt IE 7
@@ -49,7 +50,7 @@ html.no-js
                 a(href='#/egutegia') Egutegia
 
               li
-                a(href='#') Gaua
+                a(href='#/bonos') Bonos
             ul.nav.navbar-nav.navbar-right
               li
                 a(href='#')(ng-show='isadmin')(ng-click='dologout()')
@@ -99,4 +100,6 @@ html.no-js
     script(src='js/controller/egutegia.js')
     script(src='js/controller/login.js')
     script(src='js/controller/logout.js')
+    script(src='js/controller/bonos.js')
+    script(src='//cdn.datatables.net/1.10.4/js/jquery.dataTables.min.js')
     script(src='js/main.js')
