--- a/views/index.jade
+++ b/views/index.jade
@@ -92,6 +92,9 @@ html.no-js
     script(src='js/vendor/highcharts.js')
     script(src='js/vendor/highcharts-ng.min.js')
     script(src='js/vendor/gantt/dhtmlxgantt.js')
+    script(src='js/vendor/gantt/api.js')
+    script(src='js/vendor/gantt/locale_es.js')
+
     script(src='js/controller.js')
     script(src='js/controller/produccion.js')
     script(src='js/controller/linea1.js')
