--- a/views/index.jade
+++ b/views/index.jade
@@ -30,7 +30,7 @@ html.no-js
         a(href='http://browsehappy.com/') upgrade your browser
         | to improve your experience.
     .navbar.navbar-inverse.navbar-fixed-top(role='navigation')
-      .container
+      .container-fluid
         .navbar-header
           button.navbar-toggle(type='button', data-toggle='collapse', data-target='.navbar-collapse')
             span.sr-only Toggle navigation
