Live view of production status info

--- a/views/index.jade
+++ b/views/index.jade
@@ -51,6 +51,9 @@ html.no-js
 
               li
                 a(href='#/gantt') Gantt
+
+              li
+                a(href='#/live') Live
             ul.nav.navbar-nav.navbar-right
               li
                 a(href='#')(ng-show='isadmin')(ng-click='dologout()')
@@ -102,4 +105,5 @@ html.no-js
     script(src='js/controller/login.js')
     script(src='js/controller/logout.js')
     script(src='js/controller/gantt.js')
+    script(src='js/controller/live.js')
     script(src='js/main.js')
