Updated all columns to show Time to init the OF and duration in hours

--- a/static/css/main.css
+++ b/static/css/main.css
@@ -101,3 +101,13 @@ td.tdlinea {
 .boxnumhoras {
     min-height:50px !important;
 }
+
+.flex {
+    display: flex;
+}
+.divhoraini {
+    width: 50%;
+}
+.divnumhoras {
+    flex: 1;
+}
